tests/paczka1/fuzzy1/85663686.err
Error in line 6: IZDFZUzXn2 S616 7,8
Error in line 12: zqomDJ1bl5 S282 11,7
Error in line 14: zjhTNJR S292 89,9
Error in line 18: zjhTNJR A335 97,6
Error in line 17: zqomDJ1bl5 A335 95,3
Error in line 19: S282 S616 16,5
Error in line 24: S282 A335 89,8
Error in line 28: IZDFZUzXn2 S282 24,1
Error in line 34: IZDFZUzXn2 A335 61,7
Error in line 32: B1G7a S616 169,1
